--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </ul>
 
     <div class="container">
-      <div class="screen"></div>
+      <div class="screen"><p>screen</p></div>
 
       <div class="row">
         <div class="seat"></div>
